<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:layout_width="match_parent"
              android:layout_height="match_parent">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:weightSum="1">
            <TextView
                android:layout_width="100sp"
                android:layout_height="wrap_content"
                android:text = "@string/name_text"
                android:id="@+id/Item_TextView"/>
            <EditText
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/Item_EditText"
                android:layout_weight="0.59"/>

        </LinearLayout>

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:weightSum="1">
            <TextView
                android:layout_width="100sp"
                android:layout_height="wrap_content"
                android:text = "@string/price_text"
                android:id="@+id/Price_TextView"/>
            <EditText
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:inputType="numberDecimal"
                android:id="@+id/Price_EditText"
                android:layout_weight="0.59"/>
        </LinearLayout>


        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/enter_button_text"
            android:id="@+id/enter_button"/>

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/display_button_text"
            android:id="@+id/display_button"/>

    </LinearLayout>
</LinearLayout>
