<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:orientation="vertical"
              android:weightSum="1">

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:weightSum="1">
            <TextView
                android:layout_width="100sp"
                android:layout_height="wrap_content"
                android:text = "@string/name_text"
                android:id="@+id/Item_TextView"/>
            <EditText
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/Item_EditText"
                android:layout_weight="0.59"/>

        </LinearLayout>

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:weightSum="1">
            <TextView
                android:layout_width="100sp"
                android:layout_height="wrap_content"
                android:text = "@string/price_text"
                android:id="@+id/Price_TextView"/>
            <EditText
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:inputType="numberDecimal"
                android:id="@+id/Price_EditText"
                android:layout_weight="0.59"/>
        </LinearLayout>
        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:weightSum="1">
            <TextView
                android:layout_width="100sp"
                android:layout_height="wrap_content"
                android:text = "@string/date_text"
                android:id="@+id/Date_TextView"/>

            <EditText
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:editable="false"
                android:id="@+id/Date_EditText"
                android:layout_weight="0.59"/>/>
            <CheckBox
                android:id="@+id/cBox"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:checked="true"/>
        </LinearLayout>
        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:weightSum="1">

            <TextView
                android:layout_width="100sp"
                android:layout_height="wrap_content"
                android:text = "@string/category_text"
                android:id="@+id/Category_TextView"/>
            <Spinner
                android:background="#99ff99"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/cat_spinner"
                android:entries="@array/category_array"
                android:layout_weight="0.59"/>
        </LinearLayout>
        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:weightSum="1">
            <TextView
                android:layout_width="100sp"
                android:layout_height="wrap_content"
                android:text = "@string/audio_note_text"
                android:id="@+id/Audio_Note_TextView"/>
            <CheckBox
                android:id="@+id/audio_cBox"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:checked="false"/>
            <FrameLayout
                android:id="@+id/fragment_container"
                android:layout_width="match_parent"
                android:layout_height="40dp">
            </FrameLayout>

        </LinearLayout>

       <LinearLayout
           android:orientation="horizontal"
           android:layout_width="match_parent"
           android:layout_height="50dp"
           android:weightSum="1">
        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/enter_button_text"
            android:id="@+id/enter_button"/>

      <!--  <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/display_button_text"
            android:id="@+id/display_button"/>
           <Button
               android:layout_width="wrap_content"
               android:layout_height="wrap_content"
               android:id="@+id/stat_button"
               android:text="@string/stat_button_text"/>-->

           <Button
               android:layout_width="wrap_content"
               android:layout_height="wrap_content"
               android:text ="@string/network_button_text"
               android:id="@+id/connect_button" />
       </LinearLayout>
    </LinearLayout>

